# Mimicry

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  build_release.py  docker-compose.yml  pyproject.toml  requirements.txt  setup_check.py  start.bat
backend/: main.py  voice_engine.py
backend/app/: main.py  voice_engine.py
frontend/: app.js  index.html  style.css
scripts/: build_release.py
sdk/: __init__.py  async_client.py  client.py  example.py
