[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# ── Project metadata ───────────────────────────────────────────────────────

[project]
name            = "mimicry-sdk"
version         = "1.0.0"
description     = "Python SDK for the Mimicry zero-shot voice cloning system"
readme          = "README.md"
license         = { text = "MIT" }
requires-python = ">=3.10"

keywords = ["voice-cloning", "tts", "text-to-speech", "f5-tts", "ai", "sdk"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
async = ["httpx>=0.27.0"]
all   = ["httpx>=0.27.0"]

[project.urls]
Homepage    = "https://github.com/yourusername/mimicry"
Issues      = "https://github.com/yourusername/mimicry/issues"

# ── Package discovery ──────────────────────────────────────────────────────

[tool.setuptools.packages.find]
where   = ["."]
include = ["sdk*"]

[tool.setuptools.package-data]
"sdk" = ["py.typed"]

# ── Tool config ────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict         = false
ignore_missing_imports = true
